# Room-Planner

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
jsons/: test.json  test2.json  test3.json  test4.json  test5.json
room-editor/: Grid.h  actiongraphicsscene.cpp  actiongraphicsscene.h  popuplabel.cpp  popuplabel.h  roomeditor.cpp  roomeditor.h  sceneserializer.cpp  sceneserializer.h  zoomablegraphicsview.h
room-editor/InteractivePoint/: gridpoint.cpp  gridpoint.h  interactivepoint.cpp  interactivepoint.h
room-editor/SceneObjects/: redoor.h  rewall.h
room-editor/WallPoint/: Direction.h
room-editor/commands/: additemcommand.cpp  additemcommand.h  graphicsscenecommand.h  removeitemcommand.cpp  removeitemcommand.h
room-editor/furniture-db/: furnituredatabase.cpp  furnituredatabase.h
room-editor/interactive-point/: gridpoint.cpp  gridpoint.h  interactinggrid.cpp  interactinggrid.h
room-editor/scene-objects/: iroomeditorobject.cpp  iroomeditorobject.h  redoor.cpp  redoor.h  refurniture.cpp  refurniture.h  rewall.cpp  rewall.h  rewindow.cpp  rewindow.h  roomeditorobject.h
styles/: toolbar.qss
tools/: cursortool.cpp  cursortool.h  doortool.cpp  doortool.h  dragtool.cpp  dragtool.h  ikeytool.h  itool.h  removetool.cpp  removetool.h  walltool.cpp  walltool.h
widgets/: furnitureeditor.cpp  furnitureeditor.h  newproject_inputdialog.cpp  newproject_inputdialog.h  sceneobjectsmenu.cpp  sceneobjectsmenu.h  sceneobjectsmenu.ui
